fixed a problem with the about-bg on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -183,7 +183,8 @@ main {
       min-height: 600px;
       padding: 50px 0;
       background-image: url(../img/bg/about-bg-450-2x.jpg);
-      background-position: center center;
+      background-color: @main-dark;
+      background-position: top center;
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
